# greentic-events-providers

./: .codex.md  .gitignore  AUDIT.md  CONTRIBUTING.md  Cargo.toml  README.md
.codex/: PR-01-public-wit.md  PR-11C.md  PR-11E.md  PR-EVP-01_bootstrap_tooling_only.md  PR-EVP-02_webhook_provider.md  PR-EVP-03_timer_provider.md  PR-EVP-04_twilio_sms_provider.md  PR-EVP-05_email_inbound_provider.md  PR-EVP-06_ci_no_hand_rolling.md  PR-EVP-06_stub_component_unblock.md  PR-EVP_execution_backlog.md  repo_overview.md
.codex/done/: PR-11D.md  PR-11F.md  PR-XX_secrets_events_support.md
.github/workflows/: install-packc.yml  publish-latest-packs.yaml  publish-packs.yaml  publish_packs.yml  tests.yaml
ci/: local_check.sh  no_hand_rolling.sh
components/events-provider-dummy/: Cargo.toml
components/events-provider-dummy/src/: lib.rs
components/events-provider-email/: Cargo.toml
components/events-provider-email-sendgrid/: Cargo.toml  component.manifest.json
components/events-provider-email-sendgrid/schemas/: component.schema.json
components/events-provider-email-sendgrid/src/: lib.rs
components/events-provider-email/src/: lib.rs
components/events-provider-sms/: Cargo.toml
components/events-provider-sms-twilio/: Cargo.toml  component.manifest.json
components/events-provider-sms-twilio/schemas/: component.schema.json
components/events-provider-sms-twilio/schemas/io/: input.schema.json  output.schema.json
components/events-provider-sms-twilio/src/: lib.rs
components/events-provider-sms/src/: lib.rs
components/events-provider-timer/: Cargo.toml  component.manifest.json
components/events-provider-timer/schemas/: component.schema.json
components/events-provider-timer/schemas/io/: input.schema.json  output.schema.json
components/events-provider-timer/src/: lib.rs
components/events-provider-webhook/: Cargo.toml  component.manifest.json
components/events-provider-webhook/schemas/: component.schema.json
components/events-provider-webhook/schemas/io/: input.schema.json  output.schema.json
components/events-provider-webhook/src/: lib.rs
components/stub-component-v060/: Cargo.toml
components/stub-component-v060/src/: lib.rs
components/stub-component-v060/wit/: world.wit
components/templates/: component.manifest.json
crates/provider-core/: .codex.md  Cargo.toml
crates/provider-core/src/: config.rs  error.rs  events.rs  lib.rs  secrets.rs  tenant_secrets.rs
crates/provider-core/tests/: core_tests.rs  provisioning_conformance.rs  secrets_events.rs
crates/provider-email/: .codex.md  Cargo.toml
crates/provider-email/src/: lib.rs
crates/provider-email/tests/: integration_live.rs  pack_consistency.rs
crates/provider-sms/: .codex.md  Cargo.toml
crates/provider-sms/src/: lib.rs
crates/provider-sms/tests/: integration_live.rs  pack_consistency.rs
crates/provider-timer/: .codex.md  Cargo.toml
crates/provider-timer/src/: lib.rs
crates/provider-timer/tests/: integration_live.rs  pack_consistency.rs
crates/provider-webhook/: .codex.md  Cargo.toml
crates/provider-webhook/src/: lib.rs
crates/provider-webhook/tests/: integration_live.rs  pack_consistency.rs
crates/sbom-patch/: Cargo.toml
crates/sbom-patch/src/: main.rs
docs/: email.md  hosts_secrets.md  overview.md  sms.md  timer.md  webhook.md
fixtures/packs/events_provider_dummy/: pack.yaml
fixtures/packs/events_provider_email/: pack.yaml
fixtures/packs/events_provider_email_sendgrid/: pack.yaml
fixtures/packs/events_provider_sms/: pack.yaml
fixtures/packs/events_provider_sms_twilio/: pack.yaml
fixtures/packs/events_provider_timer/: pack.yaml
fixtures/packs/events_provider_webhook/: pack.yaml
fixtures/packs/secrets_events_smoke/: pack.yaml
flows/events/email/: in_default.ygtc  out_default.ygtc
flows/events/sms/: in_default.ygtc  out_default.ygtc
flows/events/timer/: default.ygtc
flows/events/webhook/: in_custom_template.ygtc  in_default.ygtc
packs/components/: component.manifest.json  events-provider-email.wasm  events-provider-sms.wasm
packs/components/stubs/: events-email-sink.wasm  events-email-source.wasm  events-sms-sink.wasm  events-sms-source.wasm  events-timer-source.wasm  events-webhook-source.wasm  stub.wasm  templating.handlebars.wasm
packs/components/templating.handlebars/: component.manifest.json
packs/events/: email.yaml  sms.yaml  timer.yaml  webhook.yaml
packs/events-dummy/: pack.json  pack.yaml
packs/events-dummy/fixtures/: emit.request.json  requirements.expected.json  setup.expected.plan.json
packs/events-email/: pack.json  pack.yaml
packs/events-email-sendgrid/: pack.json  pack.yaml  setup_default__apply.wat  setup_default__requirements.wat  setup_default__subscriptions.wat
packs/events-email-sendgrid/fixtures/: requirements.expected.json  setup.input.json
packs/events-email-sendgrid/flows/: in_default.ygtc.resolve.json  in_default.ygtc.resolve.summary.json  out_default.ygtc  out_default.ygtc.resolve.json  out_default.ygtc.resolve.summary.json  remove.ygtc  setup_custom.ygtc  setup_default.ygtc  update.ygtc
packs/events-email/fixtures/: emit.request.json  ingest.request.json  setup.expected.plan.json  subscriptions.expected.json
packs/events-email/flows/: in_default.ygtc  in_default.ygtc.resolve.json  in_default.ygtc.resolve.summary.json  out_default.ygtc.resolve.json  out_default.ygtc.resolve.summary.json
packs/events-sms/: pack.json  pack.yaml  setup_default__collect.wat  setup_default__validate.wat
packs/events-sms-twilio/: pack.json  pack.yaml  setup_default__apply.wat  setup_default__requirements.wat  setup_default__summary.wat
packs/events-sms-twilio/fixtures/: emit.request.json
packs/events-sms-twilio/flows/: in_default.ygtc  in_default.ygtc.resolve.json  in_default.ygtc.resolve.summary.json  (+11 more)
packs/events-timer/: pack.json  pack.yaml  setup_default__apply.wat  setup_default__requirements.wat
packs/events-webhook/: pack.json  pack.yaml  setup_default__apply.wat  setup_default__requirements.wat
scripts/: build_packs.sh  build_stub_components.sh  provision_conformance.sh  publish_packs_oci.sh
(+63 files in other folders)
