[package]
name = "events-provider-dummy"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
greentic-interfaces-guest = { workspace = true, features = [
    "provider-core-v1",
    "state-store",
    "types-core",
] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
blake3.workspace = true
greentic-types.workspace = true
serde_cbor.workspace = true
zip.workspace = true
tempfile.workspace = true
