[package]
name = "events-provider-sms-twilio"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
greentic-interfaces-guest = { workspace = true, features = [
    "component-node",
    "provider-core-v1",
    "state-store",
    "types-core",
] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
greentic-types.workspace = true
tempfile.workspace = true
