[package]
name = "events-provider-timer"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
greentic-interfaces-guest = { version = "0.4.69", default-features = false, features = [
    "provider-core-v1",
    "state-store",
    "types-core",
] }
chrono.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
greentic-types.workspace = true
tempfile = "3"
