[package]
name = "provider-core"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
chrono = { workspace = true }
greentic-types = { workspace = true }
greentic-interfaces-guest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[features]
default = []
secrets = ["greentic-secrets"]
oauth = ["greentic-oauth-sdk"]

[dependencies.greentic-secrets]
workspace = true
optional = true

[dependencies.greentic-oauth-sdk]
workspace = true
optional = true

[dev-dependencies]
tempfile = "3"
