[package]
name = "provider-email"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
provider-core = { path = "../provider-core" }
greentic-interfaces-guest = { workspace = true }
greentic-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dependencies.greentic-oauth-sdk]
workspace = true
optional = true

[dependencies.greentic-secrets]
workspace = true
optional = true

[dev-dependencies]
serde_yaml_bw = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
