[package]
name = "provider-sms"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
chrono = { workspace = true }
provider-core = { path = "../provider-core" }
greentic-interfaces-guest = { workspace = true }
greentic-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dependencies.greentic-secrets]
workspace = true
optional = true

[dev-dependencies]
serde_yaml_bw = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
