[package]
name = "provider-webhook"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
provider-core = { path = "../provider-core" }
greentic-interfaces-guest = { workspace = true }
greentic-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_yaml_bw = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
