[package]
name = "sbom-patch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
blake3 = "1"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_cbor = "0.11"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
