[package]
name = "sbom-patch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_cbor.workspace = true
zip.workspace = true
